--- a/1fukusyu-no-oltudoaizu-m6.html
+++ b/1fukusyu-no-oltudoaizu-m6.html
@@ -139,50 +139,179 @@ header {
 <br>エロシーンの大まかな説明
 		
 <br>すること
-,キャンプ場で性行為
-,騎乗位
-,バック　,床に打ち付けるように
+モンスターの討伐後、竜車（ほぼ馬車）内で竿役の顔を見てグローズの3人（表紙の3人赤髪いちご、緑貧乳メロン、緑巨乳スイカ）発情して座ったまま股開き（パンツ見せ）（メロンだけノーパン）
 
-,4Pハーレム
-,首輪、リードを付けている(3人の女)
-,胸揉みながらキス
-,乳首吸い上げながら乳首摘み上げ
-,胸をたぷたぷしながらビンタ
-,お座りチン嗅ぎ
-,ケツを振って誘う　←これをムチで叩きながら使う奴を選ぶ
-,リードを握ってバックピストン
-,ムチでケツを叩く
-,リードを引っ張って中出し
-,ベッドに3ケツを並べさせてムチで打つ
-,リード引っ張りアナルバック
-,絶頂前に感謝を言わせようとし、言う瞬間に頭を押さえつけて絶頂←よって言えなかったためムチで一回打つ
-,人妻(元)をリード引っ張りバック　スパンキング
-,感度と性欲を上げるも自分がイクまで絶頂はさせない
-,絶頂と同時に人妻痙攣
-,ムチで打つ
-,リード引っ張り、3匹に奉仕させてる
-,フェラ、両乳首
-,そして両耳舐め
-,騎乗位
-,感度、性欲を上げて絶頂コントロール
-,ピストンさせている間、母娘の乳首嚙み
-,リード引っ張り褐色とキスしながら絶頂期
+1人ずつ順番にキス
+三人まとめてキス　舌アップ
 
-,褐色と人妻のデカ乳を吸いながら背面騎乗位
-,褐色と人妻は自らのアナルを穿り、その手を嗅がせてくる
-,絶頂でリード引っ張り、その指をしゃぶる(竿役が)
+三人服を脱いでイチゴの長乳かスイカのデカ乳輪か・・・
+メロン「噛んで」
+↓
+メロンの貧乳に決まり
+乳首を吸い上げながらメロンに中出しをしながら、他再びの乳を鷲掴みにして、乳首をねじるように抓り上げる
 
-,人妻に正常位しながら、娘は人妻の顔にクンニさせるようになっていて、その娘のケツをムチで叩く
-,その間、褐色は後ろから竿役の乳首弄り
+次はケツで決める
+スイカかイチゴか・・・
+スイカ「あ・・・やば・・・」ブッ！と放屁
+↓
+スイカの放屁
+ツインテールを左右の手で掴んで後背位
+その後、右手だけでツインテールを握り、左手でイチゴとスイカのアナルをほじほじ
 
-,3並べてムチで打つ
+余ったイチゴ
+泣きながら懇願
+イチゴ「好き好き」竿役「俺のも好きだよ」
+イチゴ興奮ケツ振りながら放屁（透かしっ屁）
+↓
+イチゴの身体
+左手で首を絞めながら駅弁のような体勢
+三匹ゲット
 
-,上から褐色正常位、人妻バック、娘口開けてイラマチオ待ちの状態の計5穴を使う
+グローズ（三匹の所属しているグループ）の顔を見ながら三匹の身体を使う
+メロン→エロダンス役
+スイカ→ザーメンタンク役→座っている竿に対して両手を地面に付けてケツを打ち付ける体位
+イチゴ→イチャイチャラブ役→竿役の乳首を舌先でくりくり
+を入れ替えながら楽しむ
 
-,竿役は一般常識を知らないので、これがペットだと思っている
+イチャラブ役→スイカ　の乳首舐めさせる（竿役が乳首を吸う）
+ザーメンタンク役→　メロン　背面騎乗位
+エロダンス役→イチゴ
 
-,国民は尿道からの液体のみならずアナルや口、鼻、乳から食料を出すという説明とそのイラスト
-など・・・・・・
+イチャイチャラブ役→メロン　キス（顔アップで舌出し）
+ザーメンタンク役→イチゴ　対面騎乗位で竿役の乳首吸い
+エロダンス役→スイカ
+
+感謝の土下座　
+この三人に予備精液を渡して他のグローズたちの女性器に入れさせるよう指示
+
+ギルドの受付嬢に会いに行き、自分専用の宿屋へ
+
+宿屋では、ギルドでクエストを受けたことのある女たちが並んでいた
+（予備精液にて主人公の支配下になっている）
+受付嬢、服を脱いで、アナルからアナルパールをひり出す
+受付嬢に目隠し、そしてひり出したアナルパールを受付嬢の口に突っ込んでやって「乗り物」に！
+そして先ほど並んでいた雌豚共は全員ケツを中央（竿役が通る道）へ向けて
+「完全服従使用懇願の雌豚ロード」を作り出した
+目隠し鼻フック嬢の上に乗ってリードで引いてその道を進む
+
+厳選作業
+目隠し鼻フック受付嬢の上に乗って進むと同時に、並んだ左右の雌豚がケツを振ってアピール
+そのケツを叩き、アナルに指を入れ、臭いを嗅いで、好みの雌豚を選んでいく・・・
+
+選んでいった雌豚たちに身体（竿役）を舌で洗わせる
+足の指の間も
+↓雌豚の唾液で身体が汚れたので
+お仕置き
+首絞め正常位とベッドに三匹の雌豚が四つん這いでケツを振っている（首輪のリードでベッドから逃げられない状態）
+雌豚のケツをムチで叩く
+首絞め（手元アップ）
+腹パン（拳がお腹を殴っているシーンのアップ　横カメラ　お腹見にくい）
+雌豚の身体噛み（竿役の口元アップ　漫画肉のように引っ張っている）
+↓
+雌豚に歯型（見えにくい）スパンキング跡が付く
+
+雌豚ファッションショー
+雌豚の意思で決めた衣装披露会＋アピールタイム
+
+「浣腸大好きぬるぬる全身ご奉仕係テカテカバカ騎士で～す」
+ぬるぬるの競泳水着のような服従
+アナルからローションを追加して
+竿役の身体に身体ごと擦りつける
+
+「毎日の1人慰めによる熟成秘伝の激臭2穴と擦りまくったぷっくら乳首のイモキモ魔法使いミルク味です！」
+ミニスカート乳首ピアス
+愛液も汗も全身ミルク風味
+竿役の顔面にまんこ擦りつけ、アナル擦り付け
+
+「ご主人様専用肉便器です」
+「復讐の異色眼兄妹４話」に出ていた訓練施設の彼氏持ちの同期
+鼻フック、剛毛化、脇毛剛毛、お腹（へその下）に淫紋、舌に淫紋、背中に「叩いてください、絞めてください、殴ってください、犯してください、嚙んでください、抓ってください」という懇願と尻肉に「雌豚」と書かれている（この世界の文字とその上に翻訳）
+パイズリ
+
+メスぬるぬるベッド
+エアマットの上に次々とローションまみれのメス豚を横に並べた状態
+そのメス豚のぬるぬるベッドの上を滑り込む
+主観（竿役の胴体側のカメラのイメージ）
+メス豚の上を滑っている竿役の姿を横カメラ（竿役は透けている）
+竿役の胸アップにぬるぬるが付いていく（メス豚の身体側のカメラ）
+メス豚の乳首、アナル、舌、女性器のアップ（竿役の身体にくっついているような書き方　透明な板に押し当てた時のような描き方）
+適当な３穴に中出しをし終えた余韻「最高だ・・・」
+メス豚共の上で大の字（うつ伏せ）になっている竿役を上からのカメラ（竿役はすけている）
+
+追加の人妻布団
+人妻の剛毛まんこが横並びに登場
+「出産後永続レスにより毎日自慰祭りの万年発情期熱々の肉豚おばさんです～」
+両手を上げて脇見せの蟹股で胸をぱちんぱちんと鳴らす
+「この歳からの怒涛の妊娠出産ラッシュで大逆転の生涯現役孕み袋希望～」
+放屁しながら放尿（ローション）
+乳首から母乳（ローション）
+土下座で
+存在そのものを「謝罪」
+使って貰えることへの「感謝」
+使い続けて貰うための「懇願」
+徹底的な服従宣言
+
+↑これらを終えた人妻が四つん這いで群れとなって迫り来る
+そして竿役に覆い被さる
+タプタプの胸アップ
+包み込まれた竿役を上からのカメラ（人妻透明竿役が薄っすらと見える）
+竿役側の目線→二匹の舌で舐めと胸アップでぬるぬる
+
+気に入った人妻二匹　「４話の同期のカップルの母親共」
+頭を抑え付け寝バック
+絶頂するときに、リードを引いて釣り上げ（メス豚バカの一本釣りのように）
+鼻フック付き
+もう一匹は首絞め
+絶頂でリード引き頭を少し浮かした後すぐに首を抑え付ける（一本釣りキャンセル首絞め）
+鼻フック付き
+事後二匹
+
+おかわりのグローズ
+グローズが仲間を引き連れてやってきた
+
+抱かれるのは当たり前では無いため首絞め騎乗位（竿役が下から持ち上げるように）他は土下座
+エロダンスに鞭打ち
+事後お仕置き
+
+竿役主観
+3匹パイズリ、左右２匹胸合わせ
+両乳首舐められフェラ、玉舐め、膝舐め
+竿役のペニスに３匹　舌キスと唇尖らせキス
+
+首絞め、バックリード、仰け反り騎乗位　←これら主観
+
+雌豚抱き寄せる事後
+足元に四つん這いで集う雌豚
+
+メス豚釣り上げゲーム
+紐の輪っかでつい上げて騎乗位（抱きつくようなやつ）
+雌豚のアナルから食べ物をひり出させ四つん這いの雌豚共に餌やり
+
+メス豚発情媚々ダンス
+脇、アナル、まんこに手を入れて臭いチェック
+ダンスを止めたためお仕置きのムチ
+
+メス豚テクニックバトル
+メス豚同士のイカせ合い
+先に行かせたメス豚の勝ち
+敗者はお仕置き
+勝者はご褒美
+という名の同時セックス　まんこサンドの間にペニスを入れるやつ
+
+気に入ったメス豚はお持ち帰り
+複数の雌豚をまとめて持ち帰り四つん這いで歩かせる
+共に風呂（銭湯）
+部屋につれてSM
+
+この生活を繰り返す
+フェイスベールで乳首ピアス？チェーンで両乳首を繋げたメス豚三匹のダンス
+四つん這いでグラスに注がれたもの運び
+鼻フック豚のコスプレ
+
+部屋に増えていくお気に入りのペットたち・・・
+
+など・・・
+
 
 <br><b><p><font size="5">6話  限界SMペットハーレム </font></p></b>
 
