--- a/1manga-home.html
+++ b/1manga-home.html
@@ -160,6 +160,10 @@ header {
 
 <a href="1fukusyu-no-oltudoaizu-m6.html"><img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot6 (1).jpg"width=: auto; height=100% alt="限界SMペットハーレム"></a>
 
+<script type="text/javascript">blogparts={"id":"9300","ssl":"0"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
+
+<a href="1fukusyu-no-oltudoaizu-m6.html"><img src="1manga/1fukusyu-no-oltudoaizu-m/1fukusyu-no-oltudoaizu-m1/fot7 (1).jpg"width=: auto; height=100% alt="俺の身体は女王様のもの"></a>
+
 <br><script type="text/javascript">blogparts={"id":"9119","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 <br><ins class="dmm-widget-placement" data-id="6cbef7d6231c7a26b128547456d25f3a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="6cbef7d6231c7a26b128547456d25f3a"></script>
 <br><ins class="dmm-widget-placement" data-id="51512ab125da9923ad422ff9a7003391" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="51512ab125da9923ad422ff9a7003391"></script>
