--- a/10doniki.html
+++ b/10doniki.html
@@ -182,7 +182,7 @@ function Saikoro3() {
 
 	let saikoro3 = Math.floor( Math.random() * 4) +1;
 	document.getElementById("kekka3").innerHTML = saikoro3;
-        document.getElementById("sainome3").src= saikoro3 + "do.mp4"loop autoplay oncontextmenu;
+        document.getElementById("sainome3").src= saikoro3 + "do.mp4";
 
 }
 
