--- a/10doniki.html
+++ b/10doniki.html
@@ -193,7 +193,7 @@ function Saikoro3() {
 
 <!-- ↓この下に入力してね！↓ -->
 
-<p><img id="sainome3" src="3irasuto/0do.mp4 width="auto" height=150%"></p>
+<p><img id="sainome3" src="3irasuto/0do.mp4 width="auto" height="500％"></p>
 <p><button onclick="Saikoro3();">　調教日記を見る　</button></p>
 <p id="kekka3"></p>
 
