--- a/10doniki.html
+++ b/10doniki.html
@@ -157,7 +157,7 @@ function Saikoro2() {
 
 <!-- ↓この下に入力してね！↓ -->
 
-<p><img id="sainome2" src="3irasuto/0ni.jpg" width="auto" height="50％"></p>
+<p><img id="sainome2" src="3irasuto/0ni.jpg" width="auto" height="500％"></p>
 <p><button onclick="Saikoro2();">　メス豚名簿　</button></p>
 <p id="kekka2"></p>
 
@@ -193,7 +193,7 @@ function Saikoro3() {
 
 <!-- ↓この下に入力してね！↓ -->
 
-<p><img id="sainome3" src="3irasuto/0do.mp4 width="auto" height="50％"></p>
+<p><img id="sainome3" src="3irasuto/0do.mp4"  width="auto" height="50％"></p>
 <p><button onclick="Saikoro3();">　調教日記を見る　</button></p>
 <p id="kekka3"></p>
 
