--- a/10doniki.html
+++ b/10doniki.html
@@ -146,7 +146,7 @@ function Saikoro2() {
 
 	let saikoro2 = Math.floor( Math.random() * 4) +1;
 	document.getElementById("kekka2").innerHTML = saikoro2;
-        document.getElementById("sainome2").src= saikoro2 + "niki.jpg";
+        document.getElementById("sainome2").src= saikoro2 + "kao.jpg";
 
 }
 
@@ -157,8 +157,8 @@ function Saikoro2() {
 
 <!-- ↓この下に入力してね！↓ -->
 
-<p><img id="sainome2" src="3irasuto/0ni.jpg" width="auto" height="500％"></p>
-<p><button onclick="Saikoro2();">　メス豚名簿　</button></p>
+<p><img id="sainome2" src="3irasuto/0kao.jpg" width="auto" height="500％"></p>
+<p><button onclick="Saikoro2();">　飼育しているメス豚❤　</button></p>
 <p id="kekka2"></p>
 
 <!-- ここまで！ -->
@@ -188,7 +188,7 @@ function Saikoro3() {
 <!-- ↓この下に入力してね！↓ -->
 
 <p><video id="sainome3" src="3irasuto/0do.mp4"loop autoplay width="auto" height="250％"></p>
-<p><button onclick="Saikoro3();">　調教日記を見る　</button></p>
+<p><button onclick="Saikoro3();">　調教日記を見る❤　</button></p>
 <p id="kekka3"></p>
 
 <!-- ここまで！ -->
@@ -196,19 +196,16 @@ function Saikoro3() {
 </body>
 </html>
 
+		
+<br><ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
 
-
-
-
-<script type="text/javascript">blogparts={"base":"https://www.dlsite.com/","type":"keyword","site":"maniax","query":{"keyword":"東方|東方Project","order":"release_d","options":[null,"-MEN"]},"title":"東方Projectの作品一覧","display":"horizontal","detail":"1","column":"v","image":"medium","count":"3","wrapper":"1","autorotate":true,"aid":"gyhentai"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>		
 
 <br>おすすめ
 <br><a href="fannza-osusume-home.html">FANZA</a>
 <br><a href="dlsite-doujin.htm">DLsite</a>
 
 
-<br><ins class="dmm-widget-placement" data-id="3cda52cd0cd767be452c3f1498fc710a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3cda52cd0cd767be452c3f1498fc710a"></script>
 
 <br><script type="text/javascript">blogparts={"id":"10533","ssl":"0"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
