--- a/10doniki.html
+++ b/10doniki.html
@@ -187,7 +187,7 @@ function Saikoro3() {
 
 <!-- ↓この下に入力してね！↓ -->
 
-<p><video id="sainome3" src="3irasuto/0do.mp4"loop autoplay oncontextmenu="return false; width="auto" height="250％"></p>
+<p><video id="sainome3" src="3irasuto/0do.mp4"loop autoplay oncontextmenu="return false;" muted width="auto" height="250％"></p>
 <p><button onclick="Saikoro3();">　調教日記を見る❤　</button></p>
 <p id="kekka3"></p>
 
