--- a/10doniki.html
+++ b/10doniki.html
@@ -166,7 +166,11 @@ function Saikoro2() {
 </body>
 </html>
 
-
+<br>肉体改造しまくり！ドマゾ家畜のメス豚オナホ奴隷たち❤
+<br>謝罪・懇願・感謝を繰り返させ、殴る絞める噛む楽しむ❤		
+<br>難癖付けて罵って乱暴にして躾てもマゾ豚にとってはご褒美❤
+<br>快楽と暴力が混じった世界をおすそ分けです❤
+		
 <!-- 見えない部分 動画 -->
 <html>
 <head>
