--- a/102doniki.html
+++ b/102doniki.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>ゲ砂焼き鳥の無料エロ同人 変態性癖暴露室ahentai　adoujin</title>
-
+<meta http-equiv="Cache-Control" content="no-store">
 
 <!-- global navigation menu page top -->
 
