--- a/101doniki.html
+++ b/101doniki.html
@@ -188,7 +188,7 @@ function Saikoro4() {
 
 	let saikoro4 = Math.floor( Math.random() * 12) +1;
 	document.getElementById("kekka4").innerHTML = saikoro4;
-        document.getElementById("sainome4").src= saikoro4 + "do.mp4";
+        document.getElementById("sainome4").src= saikoro4 + "ksdo.mp4";
 
 }
 
@@ -199,7 +199,7 @@ function Saikoro4() {
 
 <!-- ↓この下に入力してね！↓ -->
 
-<p><video id="sainome4" src="3irasuto/0do1.mp4"loop autoplay oncontextmenu="return false;" muted width="auto" height="250％"></p>
+<p><video id="sainome4" src="3irasuto/0ksdo1.mp4"loop autoplay oncontextmenu="return false;" muted width="auto" height="250％"></p>
 <p><button onclick="Saikoro4();">　調教日記を見る❤　</button></p>
 <p id="kekka4"></p>
 
