--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             const currentURL = window.location.pathname;
-            if (currentURL === "gyhentai.com/10doniki","/gyhentai.com/102doniki") {
+            if (currentURL === "gyhentai.com/10doniki","/gyhentai.com/102doniki","/gyhentai.com/101doniki") {
                 document.body.innerHTML = `
                     <h1>このページは削除されました</h1>
                     <p>お探しのページは存在しません。<a href="/">ホームページに戻る</a></p>
